# core

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  main.yml
src/azuraforge_core/: __init__.py  tensor.py
tests/azuraforge_core/: test_tensor.py
