# core/pyproject.toml

[build-system]
requires = ["setuptools>=61.0", "wheel"] # 'wheel' eklendi
build-backend = "setuptools.build_meta"

[project]
name = "azuraforge-core"
version = "0.1.3" # Bu versiyon otomatik artırılacak
authors = [{ name = "Azmi Sahin" }]
description = "The core automatic differentiation engine (Tensor object) for the AzuraForge ecosystem."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
dependencies = ["numpy", "python-semantic-release"] # python-semantic-release eklendi

# --- YENİ BÖLÜM ---
[project.optional-dependencies]
dev = ["pytest"]

# YENİ: semantic-release yapılandırması
[tool.semantic_release]
branch = "main" # Sadece main branch'inde çalış
version_variable = "pyproject.toml:project.version" # pyproject.toml'daki versiyonu güncelle
upload_to_pypi = false # Şimdilik PyPI'ye yükleme yapmıyoruz
major_on_zero = false # 0.x.x versiyonlarında feat için major artırma
changelog_file = "CHANGELOG.md" # Değişiklik günlüğü oluştur (oluşturulacak)